<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".views.LogInActivity">

    <TextView
        android:id="@+id/login_page_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/itim"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/itim"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_page_email_id"
        android:layout_width="319dp"
        android:layout_height="46dp"
        android:layout_marginTop="188dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_background"
        android:hint="@string/Email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_appName" />

    <EditText
        android:id="@+id/login_page_password"
        android:layout_width="319dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_email_id" />

    <Button
        android:id="@+id/login_page_login_btn"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/dark_blue"
        android:fontFamily="@font/itim"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_password" />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/istok_web"
        android:text="@string/already_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_login_btn" />

    <Button
        android:id="@+id/login_page_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/istok_web"
        android:text="@string/sign_up_here"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toEndOf="@+id/dont_have_account"
        app:layout_constraintTop_toBottomOf="@+id/login_page_login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>