<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".views.WelcomeActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="216dp"
        android:fontFamily="@font/itim"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_page_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/itim"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <Button
        android:id="@+id/welcome_page_signUp_btn"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/dark_green"
        android:fontFamily="@font/itim"
        android:padding="10dp"
        android:text="@string/sign_Up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name1" />

    <TextView
        android:id="@+id/alerady_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/istok_web"
        android:text="@string/already_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_page_signUp_btn"
        app:layout_constraintStart_toStartOf="@+id/welcome_page_signUp_btn"
        app:layout_constraintTop_toBottomOf="@+id/welcome_page_signUp_btn" />

    <Button
        android:id="@+id/welcome_page_login_btn"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/istok_web"
        android:text="@string/login_here"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/alerady_account_text"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/alerady_account_text"
        app:layout_constraintTop_toBottomOf="@+id/alerady_account_text" />


</androidx.constraintlayout.widget.ConstraintLayout>